# quiell

./: pyproject.toml
quiell/: quiell_audio.py  quiell_exit.py  quiell_net.py
tests/: test_quiell.py
