[tool.poetry]
name = "quiell"
version = "0.1.0"
description = "A collection of widgets for Qtile"
authors = ["Peter Haight <peterh@giantrabbit.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pypactl = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
